--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !stage-muondetector-lite
 !stage-muondetector-lite/*
 !stage-muondetector-lite/*/*
+!stage-muondetector-lite/*/*/*
 !stage-muondetector-gui
 !stage-muondetector-gui/*
 !stage-muondetector-gui/*/*
