Added .zshrc.d directory to track in git

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 !stage-muondetector-lite/*
 !stage-muondetector-lite/*/*
 !stage-muondetector-lite/*/*/*
+!stage-muondetector-lite/*/*/*/*
 !stage-muondetector-gui
 !stage-muondetector-gui/*
 !stage-muondetector-gui/*/*
